See README and version control log for Test::Builder2 changes.

2.00_07
    Incompatible Changes
    * TB2::Event::Log now uses symbolic levels, not numeric.  This lets us
      add new levels later. [github 111]
    * Event log levels have been lower cased.


2.00_06  Thu, 27 Jan 2011 09:58:35 +1000
    Incompatible Changes
    * The EventCoordinator now only has one history object.
      histories() is now history().  clear_history() and add_histories()
      are gone. [github 115]
    * Subtest handling has been removed from the TAP formatter.  The design
      was wrong.  It will come back later in a better form [github 120]
    * Test::Builder2::Counter, History and Formatter are no longer singletons.
      This is unnecessary, use the objects provided by your EventCoordinator.
      [github 117]
    * stream_depth() is now a method on the History object, not the TAP
      formatter.  This makes it available to all event watchers. [github 118]
    * history is now posted events before the formatter.  This lets the
      formatter ask the history object about the test state.
    * INNER_accept_event and INNER_accept_result are now gone from the
      Formatter.  Write accept_event and accept_result normally.
    * TB2->ok will now start the stream if there is not one already

    New Features
    * Added Test::Builder2::CanLoad to protect $! and $@ from tests loading
      modules internally.
    * Added Test::Builder2::Tester to test Test:: modules independent of
      their format. [github 112]
    * Added Test::Builder2::History->plan to capture the plan event so
      builders don't have to
    * Test::Builder no longer tracks the plan on its own, it uses the
      shared History object. [github 125]

    Bug Fixes
    * More $@ and $! protection.
    * Test::Builder now works with non-TAP formatters (or no formatter at all)


2.00_05  Mon, 24 Jan 2011 14:52:27 +1000
    Bug Fix
    * reset() was not grabbing a fresh copy of STDOUT and STDERR

    Test Fix